feat: additional MC eggs